--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
         </section>
 
         <section class="already">
-            <div class="container">
-
+            <div class="already__container"> 
+                <h1 class="already__title">Already have a Mailchimp account?</h1>
+                <p class="already__text">Good news! If you’re a freelancer or agency, you can enjoy these benefits for no additional cost as soon as you join Mailchimp & Co. You won't lose any existing data and you can revert back at any time.</p>
+                <button class="already__button">Join Mailchimp & Co</button>
             </div>
         </section>
 
