--- a/index.html
+++ b/index.html
@@ -41,7 +41,20 @@
 
         <section class="slider">
             <div class="container">
-
+                <span class="slider__container-span">See what our partners are saying</span>
+               <div class="frame container">
+                <img src="./img/slider/man.png" alt="error" class="slider__container-image">
+                <p class="slider__container-text">Mailchimp’s robust support and documentation has allowed us to explore unique solutions and evolve with our brand's needs in ways other ‘enterprise’ marketing platforms should take notice of.
+                    <span class="slider__container__text-span">Danny Phillips, Director of Arkade</span>
+                </p>
+               </div>
+               <div class="circle">
+                <div class="circles1"></div>
+                <div class="circles"></div>
+                <div class="circles"></div>
+                <div class="circles"></div>
+                <div class="circles"></div>
+               </div>
             </div>
         </section>
 
